--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,12 @@
     width: 100%;
     background-color: black;
     height: 150px;
-    position: relative;
-    margin-bottom: 150px;
+    /* position: relative; */
+    /* margin-bottom: 150px; */
 
 }
 .name {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; */
     font-weight: 600;
     padding: 15px;
     Background-color: black;
@@ -16,7 +16,7 @@
     width: 500px;
     height: 150px;
     position: absolute;
-    left: 0px;
+   left: 0px;
 }
 
 .linkcard{
