--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,8 @@
 
 }
 .name {
-    font-family: Arial, Helvetica, sans-serif; */
     font-weight: 600;
-    padding: 15px;
-    Background-color: black;
-    font-size: 72px;
-    color: white;
-    width: 500px;
-    height: 150px;
-    position: absolute;
-   left: 0px;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .linkcard{
@@ -29,19 +21,25 @@
 .links{
     display: inline;
 }
-#githubicon{
-    height: 150px;
-    width: 150px;
+.githubicon{
+    height: 120px;
+    width: 120px;
+    margin-bottom: 0px;
 }
-#linkedinicon{
-    height: 150px;
-    width: 150px;
+.linkedinicon{
+    height: 120px;
+    width: 120px;
+    margin-bottom: 0px;
 }
 
 .cardlink {
     color: black;
 }
+nav{
+    height:120px;
 
+    background-color: black;
+}
 /* .bio{
     padding: 10px;
     margin: 5px;
