--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,15 +40,10 @@ nav{
 
     background-color: black;
 }
-/* .bio{
-    padding: 10px;
-    margin: 5px;
-    width: 60%;
-    right: 100px;
-    top: 100px;
-    font-size: 18px;
-    position: absolute;
-} */
+.bio{
+    margin: 0px;
+    font-size: 18px; 
+   } 
 
 
 
