--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,9 @@
-.masthead {
-    width: 100%;
+body{
     background-color: black;
-    height: 150px;
-    /* position: relative; */
-    /* margin-bottom: 150px; */
-
 }
 .name {
-    margin: 20px;
+    margin: 0;
+    /* font-size: 64px; */
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif
 }
@@ -48,4 +44,8 @@ nav{
    } 
 
 
-
+   @media screen and (min-width: 608px){
+    .myheader{
+        height:160px;
+    }
+   }
