adds slide out nav bar with link to resume and a footer with david byrne quote and another parallax image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,10 @@ body{
 .card-title{
     background-color: black;
 }
-
+.myheader {
+    padding:0px;
+    padding-top:10px;
+}
 
    @media screen and (min-width: 608px){
     .myheader{
