--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,9 @@ body{
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif
 }
-
+/* body :hover{
+    box-shadow: 10px 10px grey;
+} */
 .githubicon{
     height: 120px;
     width: 120px;
