getting carousel size right and responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,20 @@
 body{
     background-color: black;
 }
-
+.carousel.carousel-slider.carousel-item {
+    height: 400px;
+    width: 50%;
+}
 #project1 {
     background-image: url("../images/foodtruck.jpg");
     background-size: cover;
+    width: 50%;
 }
 #project2 {
     background-image: url("../images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg");
     background-size: cover;
+    width: 50%;
+
 
 }
 .name {
@@ -61,6 +67,9 @@ body{
     }
    }
 @media screen and (max-width: 599px){
+    #project1 #project2{
+
+    }
     .githubicon{
         height: 100px;
         width: 100px;
