--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,28 @@
 body{
     background-color: black;
 }
-.carousel.carousel-slider.carousel-item {
-    height: 400px;
-    width: 50%;
-}
+
 #project1 {
     background-image: url("../images/foodtruck.jpg");
     background-size: cover;
-    width: 50%;
+    width: 70%;
 }
 #project2 {
     background-image: url("../images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg");
     background-size: cover;
-    width: 50%;
-
-
+    width: 70%;
 }
+#project3 {
+    background-image: url("../images/spencer-davis-o_XkavUaGEw-unsplash2.jpg");
+    background-size: cover;
+    width: 70%;
+}
+#project4 {
+    background-image: url("../images/dogmemory.jpg");
+    background-size: cover;
+    width: 70%;
+}
+
 .name {
     margin: 0;
     /* font-size: 64px; */
@@ -67,9 +73,6 @@ body{
     }
    }
 @media screen and (max-width: 599px){
-    #project1 #project2{
-
-    }
     .githubicon{
         height: 100px;
         width: 100px;
