--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,38 @@
 body{
     background-color: black;
 }
-
+.pheading{
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 100px;
+}
+.ptext{
+    background-color: rgba(0,0,0,0.5);
+    width: auto;
+}
 #project1 {
     background-image: url("../images/foodtruck.jpg");
     background-size: cover;
     width: 70%;
+    padding-top: 40px;
 }
 #project2 {
     background-image: url("../images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg");
     background-size: cover;
     width: 70%;
+    padding-top: 40px;
 }
 #project3 {
     background-image: url("../images/spencer-davis-o_XkavUaGEw-unsplash2.jpg");
     background-size: cover;
     width: 70%;
+    padding-top: 40px;
 }
 #project4 {
     background-image: url("../images/dogmemory.jpg");
     background-size: cover;
     width: 70%;
+    padding-top: 40px;
 }
 
 .name {
@@ -52,7 +64,7 @@ body{
     color: black;
 }
 #headshot {
-    border-radius: 50%;
+    border-radius: 25%;
     width: 100%;
 }
 .bio{
