adjusting some margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,8 @@ body{
     padding-top:10px;
 }
 .picandbio{
-    margin-top: 150px;
+    margin-top: 120px;
+    margin-bottom: 100px;
 }
 
    @media screen and (min-width: 608px){
