--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,25 +11,25 @@ body{
     width: auto;
 }
 #project1 {
-    background-image: url("../images/foodtruck.jpg");
+    background-image: url("assets/images/foodtruck.jpg");
     background-size: cover;
     width: 70%;
     padding-top: 40px;
 }
 #project2 {
-    background-image: url("../images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg");
+    background-image: url("assets/images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg");
     background-size: cover;
     width: 70%;
     padding-top: 40px;
 }
 #project3 {
-    background-image: url("../images/spencer-davis-o_XkavUaGEw-unsplash2.jpg");
+    background-image: url("assets/images/spencer-davis-o_XkavUaGEw-unsplash2.jpg");
     background-size: cover;
     width: 70%;
     padding-top: 40px;
 }
 #project4 {
-    background-image: url("../images/dogmemory.jpg");
+    background-image: url("assets/images/dogmemory.jpg");
     background-size: cover;
     width: 70%;
     padding-top: 40px;
